kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nginx
        image: alifaraz7178/nginx:1.2.0
        ports:
        - containerPort: 80

      - name: webapp
        image: alifaraz7178/webapp:1.1.14
        ports:
        - containerPort: 5000
