kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: webapp-service
  namespace: webapp
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
  type: NodePort
