kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: webapp
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: webapp-service
              servicePort: 80
